--- a/.gitattributes
+++ b/.gitattributes
@@ -3,6 +3,7 @@
 
 # Explicitly declare text files you want to always convert line endings to LF
 # even on Windows
+usr/local/tce.installed/* text eol=lf
 *.sh text eol=lf
 *.lst text eol=lf
 *.py text eol=lf
